--- a/src/Sass/layout/_perfil.scss
+++ b/src/Sass/layout/_perfil.scss
@@ -3,7 +3,7 @@
 }
 .perfil {
     width: 40%;
-    background-image: url('../img/Perfil.webp');
+    background-image: url('../../img/Perfil.webp');
     background-size: contain;
     background-position: center;
     background-repeat: no-repeat;
