--- a/src/Sass/base/_variables.scss
+++ b/src/Sass/base/_variables.scss
@@ -4,6 +4,7 @@ $theme-colors: (
     'info': #e67e22,
     'dark': #34495e,
     'success': #2ecc71,
+    'warning' : #00FF00,
 );
 $fuenteTitulos: 'Lato', sans-serif;
 $fuenteParrafos: 'Noto Sans', sans-serif;
